# PolarisationSimulator

./: CMakeLists.txt  PolarisationSimulator.pro  main.cpp  ps_element.cpp  ps_element.h  ps_enum.h  ps_mainwindow.cpp  ps_mainwindow.h  ps_mainwindow.ui  ps_mat.cpp  ps_mat.h  ps_space.cpp  ps_space.h  ps_stokescalc.cpp  ps_stokescalc.h  ps_stokescalc.ui  ps_vec.cpp  ps_vec.h
WindowsBuild/: LICENCE.txt
